# trader-bot

./: .gitignore  =1.0  PROJECT_SPEC.md  events_calendar.yaml  pyproject.toml  requirements.txt  settings.yaml
tests/: test_cost_model_spread.py  test_filters.py  test_funding_arb.py  test_indicators.py  test_metrics.py  test_multi_asset_metrics.py  test_multi_asset_runner.py  test_position_store.py  test_risk_manager.py  test_spread_engine.py  test_spread_metrics.py  test_strategy.py
trader/: main.py
trader/backtest/: cost_model.py  engine.py  metrics.py  monte_carlo.py  multi_asset_metrics.py  multi_asset_runner.py  spread_engine.py  spread_metrics.py  walk_forward.py
trader/config/: settings.py
trader/data/: fetcher.py  funding_fetcher.py  store.py
trader/filters/: chop_filter.py  correlation_filter.py  event_filter.py  session_filter.py
trader/indicators/: technical.py
trader/live/: exchange_client.py  order_executor.py  position_store.py  runner.py
trader/models/: spread_types.py  types.py
trader/risk/: risk_manager.py
trader/strategies/: base.py  funding_arb.py  spread_base.py  volatility_breakout.py
